# spotiplay

./: README.md  pyproject.toml
spotiplay/: client_credentials.py  create_playlist.py  load_songlist.py  session.py  spotiplay.code-workspace
